--- a/web_manager/src/main/webapp/admin/index.html
+++ b/web_manager/src/main/webapp/admin/index.html
@@ -286,7 +286,24 @@
                                 </li>
                             </ul>
                         </li>
+                        <li class="treeview">
+                            <a href="#">
+                                <i class="fa fa-folder"></i>
+                                <span>用户管理</span>
+                                <span class="pull-right-container">
+				       			<i class="fa fa-angle-left pull-right"></i>
+				   		 	</span>
+                            </a>
+                            <ul class="treeview-menu">
 
+
+                                <li id="admin-login">
+                                    <a href="user.html" target="iframe">
+                                        <i class="fa fa-circle-o"></i>用户管理
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </nav>
