--- a/web_shop/src/main/webapp/admin/order.html
+++ b/web_shop/src/main/webapp/admin/order.html
@@ -59,7 +59,7 @@
 									      <th class="sorting">订单发货状态</th>
 									      <th class="sorting">订单创建时间</th>
 										  <th class="sorting">下单用户</th>
-					                      <th class="text-center">查看订单</th>
+					                      <th class="text-center">订单发货</th>
 			                          </tr>
 			                      </thead>
 			                      <tbody>
@@ -69,8 +69,8 @@
 									      <td>{{status[entity.status]}}</td>
 										  <td>{{entity.createTime}}</td>
 		                                  <td>{{entity.userId}}</td>
-		                                  <td class="text-center">                                           
-		                                 	  <button type="button" class="btn bg-olive btn-xs" ng-click="findById(entity.id)" data-toggle="modal" data-target="#editModal"  >修改</button>                                           
+		                                  <td class="text-center">
+		                                 	  <button type="button" class="btn bg-olive btn-xs" ng-click="findOne(entity.orderId)" data-toggle="modal" data-target="#editModal"  >修改发货信息</button>
 		                                  </td>
 			                          </tr>
 									  
@@ -93,22 +93,27 @@
 	<div class="modal-content">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-			<h3 id="myModalLabel">品牌编辑</h3>
+			<h3 id="myModalLabel">发货信息详情</h3>
 		</div>
 		<div class="modal-body">		
 			<table class="table table-bordered table-striped"  width="800px">
+				<tr>
+					<td>订单编号</td>
+					<td><input ng-model="entity.orderId" class="form-control" placeholder="订单编号" >  </td>
+				</tr>
 		      	<tr>
-		      		<td>品牌名称</td>
-		      		<td><input ng-model="entity.name" class="form-control" placeholder="品牌名称" >  </td>
+		      		<td>物流名称</td>
+		      		<td><input ng-model="entity.shippingName" class="form-control" placeholder="物流名称" >  </td>
 		      	</tr>		      	
 		      	<tr>
-		      		<td>首字母</td>
-		      		<td><input ng-model="entity.firstChar" class="form-control" placeholder="首字母">  </td>
+		      		<td>物流单号</td>
+		      		<td><input ng-model="entity.shippingCode" class="form-control" placeholder="物流单号">  </td>
 		      	</tr>		      	
 			 </table>				
 		</div>
-		<div class="modal-footer">						
-			<button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="save()">保存</button>
+		<div class="modal-footer">
+			<button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="save()">保存发货信息并发货</button>
+			<button class="btn btn-danger"  data-dismiss="modal" aria-hidden="true" ng-click="save()">更改状态为暂未发货</button>
 			<button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
 		</div>
 	  </div>
