--- a/web_shop/src/main/webapp/admin/index.html
+++ b/web_shop/src/main/webapp/admin/index.html
@@ -353,8 +353,25 @@
                                 <i class="fa fa-circle-o"></i> 商品管理
                             </a>
                         </li>
+                        <li id="admin-login">
+                            <a href="brand.html" target="iframe">
+                                <i class="fa fa-circle-o"></i> 品牌管理
+                            </a>
+                        </li>
+                        <li id="admin-login">
+                            <a href="specification.html" target="iframe">
+                                <i class="fa fa-circle-o"></i> 规格管理
+                            </a>
+                        </li>
+                        <li id="admin-login">
+                            <a href="type_template.html" target="iframe">
+                                <i class="fa fa-circle-o"></i> 分类管理
+                            </a>
+                        </li>
                     </ul>
                 </li>
+
+
 
                 <!-- 菜单 /-->
                 <!-- 订单管理-->
