--- a/web_manager/src/main/webapp/admin/index.html
+++ b/web_manager/src/main/webapp/admin/index.html
@@ -374,6 +374,16 @@
 				                    <i class="fa fa-circle-o"></i>商品审核
 				                </a>
 				            </li>
+                            <li id="admin-login">
+                                <a href="" target="iframe">
+                                    <i class="fa fa-circle-o"></i>订单查询
+                                </a>
+                            </li>
+                            <li id="admin-login">
+                                <a href="OrderItemCount.html" target="iframe">
+                                    <i class="fa fa-circle-o"></i>订单统计
+                                </a>
+                            </li>
 				        </ul>                        
 				    </li>
 					
