--- a/web_shop/src/main/webapp/admin/index.html
+++ b/web_shop/src/main/webapp/admin/index.html
@@ -349,6 +349,11 @@
                             </a>
                         </li>
                         <li id="admin-login">
+                            <a href="item_cat.html" target="iframe">
+                                <i class="fa fa-circle-o"></i> 新增分类
+                            </a>
+                        </li>
+                        <li id="admin-login">
                             <a href="goods.html" target="iframe">
                                 <i class="fa fa-circle-o"></i> 商品管理
                             </a>
