--- a/web_shop/src/main/webapp/admin/item_cat.html
+++ b/web_shop/src/main/webapp/admin/item_cat.html
@@ -21,14 +21,24 @@
     <script type="text/javascript" src="../js/controller/baseController.js"></script>
     <script type="text/javascript" src="../js/controller/itemCatController.js"></script>
     <script type="text/javascript" src="../js/service/itemCatService.js"></script>
+
+
+
+	<!-- 引入select2的相关的css和js -->
+	<link rel="stylesheet" href="../plugins/select2/select2.css" />
+	<link rel="stylesheet" href="../plugins/select2/select2-bootstrap.css" />
+	<script src="../plugins/select2/select2.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="../js/angular-select2.js">  </script>
     
 </head>
 
-<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="itemCatController" ng-init="findAll()">
+<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="itemCatController" ng-init="findItemCatList();findTypeList()">
   <!-- .box-body -->
+
+
                 
                     <div class="box-header with-border">
-                        <h3 class="box-title">商品分类管理     
+                        <h3 class="box-title">新增商品分类
                        	</h3>
                     </div>
 
@@ -37,13 +47,6 @@
                         		<li>
 		                        	<a href="#" ng-click="grade=1;selectList({id:0})">顶级分类列表</a> 
 		                        </li>
-		                        <li>
-		                       		<a href="#" ng-click="grade=2;selectList(entity_1)">{{entity_1.name}}</a>
-		                        </li>
-		                        <li>
-		                        	<a href="#" ng-click="grade=3;selectList(entity_2)">{{entity_2.name}}</a>
-		                        </li>
-	                        </ol>
 
                         <!-- 数据表格 -->
                         <div class="table-box">
@@ -116,26 +119,26 @@
 			
 			<table class="table table-bordered table-striped"  width="800px">
 				<tr>
-		      		<td>上级商品分类</td>
+		      		<td>父类分类</td>
 		      		<td>
-		      		   珠宝 >>  银饰
+						<input select2 ng-model="entity.parentId" config="itemList"  placeholder="支持多选哦" class="form-control" type="text"/>
 		      		</td>
 		      	</tr>
 		      	<tr>
 		      		<td>商品分类名称</td>
-		      		<td><input  class="form-control" placeholder="商品分类名称">  </td>
+		      		<td><input  ng-model="entity.name" class="form-control" ng- placeholder="商品分类名称">  </td>
 		      	</tr>			  
 		      	<tr>
 		      		<td>类型模板</td>
-		      		<td>	      		
-		      			<input select2 config="options['type_template']" placeholder="商品类型模板" class="form-control" type="text"/>
+		      		<td>
+						<input select2 ng-model="entity.typeId" config="typeList"  placeholder="支持多选哦" class="form-control" type="text"/>
 		      		</td>		      		      		
 		      	</tr>		      	
 			 </table>				
 			
 		</div>
 		<div class="modal-footer">						
-			<button class="btn btn-success" data-dismiss="modal" aria-hidden="true">保存</button>
+			<button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="save()">保存</button>
 			<button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
 		</div>
 	  </div>
