商家后台-订单统计功能完成

--- a/web_shop/src/main/webapp/admin/index.html
+++ b/web_shop/src/main/webapp/admin/index.html
@@ -396,13 +396,8 @@
                             </a>
                         </li>
                         <li id="admin-login">
-                            <a href="goods.html" target="iframe">
+                            <a href="totalOrder.html" target="iframe">
                                 <i class="fa fa-circle-o"></i> 订单统计
-                            </a>
-                        </li>
-                        <li id="admin-login">
-                            <a href="goods.html" target="iframe">
-                                <i class="fa fa-circle-o"></i> 订单发货
                             </a>
                         </li>
                     </ul>
