刘金贺第二次修改

--- a/web_shop/src/main/webapp/admin/goods.html
+++ b/web_shop/src/main/webapp/admin/goods.html
@@ -25,6 +25,8 @@
     <script type="text/javascript" src="../js/controller/baseController.js"></script>
     <script type="text/javascript" src="../js/controller/goodsController.js"></script>
     <script type="text/javascript" src="../js/service/goodsService.js"></script>
+    <!--<script type="text/javascript" src="../js/controller/seckillController.js"></script>-->
+    <script type="text/javascript" src="../js/service/seckillService.js"></script>
     <script type="text/javascript" src="../js/service/itemCatService.js"></script>
     <script type="text/javascript" src="../js/service/uploadService.js"></script>  
     <script type="text/javascript" src="../js/service/typeTemplateService.js"></script>  
@@ -52,6 +54,7 @@
                                         <button type="button" class="btn btn-default" title="提交审核" ><i class="fa fa-check"></i> 提交审核</button>
                                         <button type="button" class="btn btn-default" title="屏蔽" onclick='confirm("你确认要屏蔽吗？")'><i class="fa fa-ban"></i> 屏蔽</button>
                                         <button type="button" class="btn btn-default" title="刷新" onclick="window.location.reload();"><i class="fa fa-refresh"></i> 刷新</button>
+                                        <button type="button" class="btn btn-default" title="秒杀申请" data-toggle="modal" data-target="#editModal" ><i class="fa fa-file-o"></i> 秒杀申请</button>
                                     </div>
                                 </div>
                             </div>
@@ -117,7 +120,65 @@
                         
                      </div>
                     <!-- /.box-body -->
+
+
+
+
+  <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog" >
+          <div class="modal-content">
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                  <h3 id="myModalLabel">商品类型模板编辑</h3>
+              </div>
+              <div class="modal-body">
+
+                  <table class="table table-bordered table-striped"  width="800px">
+                      <tr>
+                          <td>秒杀标语</td>
+                          <td><input  class="form-control" placeholder="模板类型" ng-model="entity.title">  </td>
+                      </tr>
+                      <tr>
+                          <td>秒杀价格</td>
+                          <td><input  class="form-control" placeholder="模板类型" ng-model="entity.price">  </td>
+                      </tr>
+                      <tr>
+                          <td>优惠折扣</td>
+                          <td><input  class="form-control" placeholder="模板类型" ng-model="entity.nacost_priceme">  </td>
+                      </tr>
+                      <tr>
+                          <td>开始时间</td>
+                          <td><input  class="form-control" placeholder="模板类型" ng-model="entity.start_time">  </td>
+                      </tr>
+                      <tr>
+                          <td>结束时间</td>
+                          <td><input  class="form-control" placeholder="模板类型" ng-model="entity.end_time">  </td>
+                      </tr>
+                      <tr>
+                          <td>商品数量</td>
+                          <td><input  class="form-control" placeholder="模板类型" ng-model="entity.num">  </td>
+                      </tr>
+                      <tr>
+                          <td>库存</td>
+                          <td><input  class="form-control" placeholder="模板类型" ng-model="entity.stock_count">  </td>
+                      </tr>
+                      <tr>
+                          <td>备注</td>
+                          <td><input  class="form-control" placeholder="模板类型" ng-model="entity.interoduction">  </td>
+                      </tr>
+                  </table>
+
+              </div>
+              <div class="modal-footer">
+                  <button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="saveSeckill()">保存</button>
+                  <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
+              </div>
+          </div>
+      </div>
+  </div>
 		
 </body>
 
 </html>
+
+
