--- a/web_manager/src/main/webapp/admin/item_cat.html
+++ b/web_manager/src/main/webapp/admin/item_cat.html
@@ -24,7 +24,8 @@
     <script type="text/javascript" src="../js/controller/baseController.js"></script>
     <script type="text/javascript" src="../js/controller/itemCatController.js"></script>
     <script type="text/javascript" src="../js/service/itemCatService.js"></script>
-    
+    <script type="text/javascript" src="../js/service/uploadService.js"></script>
+
 </head>
 
 <body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="itemCatController" ng-init="findAll()"><!--ng-init="findAll()"-->
@@ -57,6 +58,7 @@
 									<div class="btn-group">
 										<button type="button" class="btn btn-default" title="新建" data-toggle="modal" data-target="#editModal" ><i class="fa fa-file-o"></i> 新建</button>
 										<button type="button" ng-click="dele()" class="btn btn-default" title="删除" ><i class="fa fa-trash-o"></i> 删除</button>
+										<button type="button"  class="btn btn-default" title="导入" data-target="#uploadModal"  data-toggle="modal"  ><i class="fa fa-file-o"></i>导入</button>
 										<button type="button" ng-click="updateStatus('1')" class="btn btn-default" title="审核通过" ><i class="fa fa-check"></i> 审核通过</button>
 										<button type="button" ng-click="updateStatus('2')" class="btn btn-default" title="驳回" ><i class="fa fa-ban"></i> 驳回</button>
 										<button type="button" class="btn btn-default" title="刷新" ><i class="fa fa-refresh"></i> 刷新</button>
@@ -145,6 +147,50 @@
 			<button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
 		</div>
 	  </div>
+	</div>
+</div>
+<!-- 上传窗口 -->
+<div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog" >
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+				<h3 id="myModalLabel">上传文件</h3>
+			</div>
+			<div class="modal-body">
+
+				<table class="table table-bordered table-striped">
+
+					<tr>
+						<td>文件</td>
+						<td>
+							<table>
+								<tr>
+									<td>
+										<input type="file" id="file" />
+										<button class="btn btn-primary" type="button" ng-click="uploadFile()">
+											上传
+										</button>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										{{excel_entity}}
+									</td>
+								</tr>
+
+							</table>
+						</td>
+					</tr>
+				</table>
+
+			</div>
+			<div class="modal-footer">
+				<button class="btn btn-success"  data-dismiss="modal" ng-click="add_excel_entity(excel_entity)" aria-hidden="true">保存</button>
+				<button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
+			</div>
+
+		</div>
 	</div>
 </div>
 </body>
