高层： 用户权限冻结功能实现

--- a/web_manager/src/main/webapp/admin/user.html
+++ b/web_manager/src/main/webapp/admin/user.html
@@ -22,8 +22,9 @@
 
     <script type="text/javascript" src="../js/base_pagination.js"></script>
     <script type="text/javascript" src="../js/controller/baseController.js"></script>
-    <script type="text/javascript" src="../js/service/userService.js"></script>
     <script type="text/javascript" src="../js/controller/userController.js"></script>
+    <script type="text/javascript" src="../js/service/userService.js"></script>
+
 
 </head>
 
@@ -40,13 +41,52 @@
             <div class="form-group form-inline">
                 <div class="btn-group">
                     <button type="button" class="btn btn-default" title="导出" ng-click="getExcel()" ><i class="fa fa-trash-o"></i> 导出</button>
-
+                    <button type="button" ng-click="updateStatus('0')" class="btn btn-default" title="冻结" ><i class="fa fa-check"></i> 冻结</button>
+                    <button type="button" ng-click="updateStatus('1')" class="btn btn-default" title="解除" ><i class="fa fa-ban"></i> 解除</button>
                     <button type="button" class="btn btn-default" title="刷新" onclick="window.location.reload();"><i class="fa fa-refresh"></i> 刷新</button>
                 </div>
             </div>
         </div>
 
+
+        <table id="dataList" class="table table-bordered table-striped table-hover dataTable">
+            <thead>
+            <tr>
+                <th class="" style="padding-right:0px">
+                    <input id="selall" type="checkbox" class="icheckbox_square-blue">
+                </th>
+                <th class="sorting_asc">用户ID</th>
+                <th class="sorting">用户名</th>
+                <th class="sorting">真实姓名</th>
+                <th class="sorting">用户电话</th>
+                <th class="sorting">用户邮箱</th>
+                <th class="sorting">QQ号码</th>
+                <th class="sorting">性别</th>
+                <th class="sorting">会员等级</th>
+                <th class="sorting">权限状态</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="entity in list">
+                <td><input  type="checkbox" ng-click="updateSelection($event,entity.id)"></td>
+                <td>{{entity.id}}</td>
+                <td>{{entity.username}}</td>
+                <td>{{entity.name}}</td>
+                <td>{{entity.phone}}</td>
+                <td>{{entity.email}}</td>
+                <td>{{entity.qq}}</td>
+                <td>{{entity.sex}}</td>
+                <td>{{entity.userLevel}}</td>
+                <td>{{entity.email}}</td>
+                <td>{{entity.auditstatus}}</td>
+            </tr>
+
+            </tbody>
+        </table>
+        <!--数据列表/-->
     </div>
+    <!-- 分页 -->
+    <tm-pagination conf="paginationConf"></tm-pagination>
 
 </div>
 
