--- a/web_manager/src/main/webapp/admin/type_template.html
+++ b/web_manager/src/main/webapp/admin/type_template.html
@@ -225,7 +225,7 @@
 
 			</div>
 			<div class="modal-footer">
-				<button class="btn btn-success"  data-dismiss="modal" ng-click="add_excel_entity(excel_entity)" aria-hidden="true">保存</button>
+				<button class="btn btn-success"  data-dismiss="modal" ng-click="add_type_entity(excel_entity)" aria-hidden="true">保存</button>
 				<button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
 			</div>
 
