刘金贺第三次修改 完成分类申请,审核以及秒杀商品申请

--- a/web_shop/src/main/webapp/admin/goods.html
+++ b/web_shop/src/main/webapp/admin/goods.html
@@ -148,11 +148,11 @@
                       </tr>
                       <tr>
                           <td>开始时间</td>
-                          <td><input  class="form-control" placeholder="模板类型" ng-model="entity.start_time">  </td>
+                          <td><input type="datetime-local" class="form-control" placeholder="模板类型" ng-model="entity.start_time2">  </td>
                       </tr>
                       <tr>
                           <td>结束时间</td>
-                          <td><input  class="form-control" placeholder="模板类型" ng-model="entity.end_time">  </td>
+                          <td><input type="datetime-local" class="form-control" placeholder="模板类型" ng-model="entity.end_time2">  </td>
                       </tr>
                       <tr>
                           <td>商品数量</td>
