高层：用户统计用户个数完成

--- a/web_manager/src/main/webapp/admin/user.html
+++ b/web_manager/src/main/webapp/admin/user.html
@@ -87,9 +87,8 @@
     </div>
     <!-- 分页 -->
     <tm-pagination conf="paginationConf"></tm-pagination>
-
+<span><h2>共有用户个数为:{{paginationConf.totalItems}}人</h2></span>
 </div>
-
 
 </body>
 
