订单查询实现成功

--- a/web_manager/src/main/webapp/admin/index.html
+++ b/web_manager/src/main/webapp/admin/index.html
@@ -379,11 +379,11 @@
                                     <i class="fa fa-circle-o"></i>订单查询
                                 </a>
                             </li>
-                            <li id="admin-login">
+                            <!--<li id="admin-login">
                                 <a href="OrderItemCount.html" target="iframe">
                                     <i class="fa fa-circle-o"></i>订单统计
                                 </a>
-                            </li>
+                            </li>-->
 				        </ul>                        
 				    </li>
 					
