--- a/web_manager/src/main/webapp/admin/order.html
+++ b/web_manager/src/main/webapp/admin/order.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>订单管理</title>
+    <title>订单查询</title>
     <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
     <link rel="stylesheet" href="../plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../plugins/adminLTE/css/AdminLTE.css">
@@ -26,7 +26,7 @@
 <body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="orderController">
   <!-- .box-body -->
                     <div class="box-header with-border">
-                        <h3 class="box-title">订单管理</h3>
+                        <h3 class="box-title">订单查询</h3>
                     </div>
 
                     <div class="box-body">
